--- a/README
+++ b/README
@@ -3,9 +3,4 @@ phpOpenNOS
 
 phpOpenNOS aims to be a ready to use library for connecting to the OpenNOS API, a REST API by dutch public broadcasting company NOS. More information is available at http://open.nos.nl/
 
-PHP5.4 has not yet been tested, but should in theory work fine.
-
-TODO
-====
-
-- Error handling
+This project is deprecated since Open NOS stopped to exist. This repository will be deleted soon.
